k8s-test-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-test-service
spec:
  selector:
    app: sanic-k8s
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
